--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="bg-white">
     <div class="mt-8 ml-10">
       <h1 class="text-4xl mb-5 font-regular text-black">
-        Stromverbrauch der Städte Zürich und Basel
+        Stromverbrauch der Städte Zürich und Basel das ist eine test
       </h1>
       <h3 class="text-0.5xl font-light font-reg text-black">
         Eine Explotation mit gradlineingen und Radialen Darstellungsformen
