--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
   </head>
 
   <body class="bg-white">
-    <div class="mt-8 ml-10">
+    <div class="mt-8 mx-8">
       <h1 class="text-4xl mb-1 font-bold text-black">15 Minuten Wellen</h1>
       <h1 class="text-2xl mb-5 font-regular text-black">
         Basel und Zürich: Energieverbrauch im 15’ Takt
       </h1>
-      <p class="text-0.5xl font-light font-reg text-black">
-        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
+      <p class="text-0.5xl font-light font-reg text-black max-w-md">
+        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und
+        Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind,
+        eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine
+        Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit
+        von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
+        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und
+        Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind,
+        eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine
+        Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit
+        von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
+        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und
+        Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind,
+        eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine
+        Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit
+        von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
       </p>
       <p class="text-0.5xl font-light font-reg text-black pb-5">
         Auf dieser Seite findet man...
@@ -33,9 +47,13 @@
       <div class="text-center text-black">
         2019-2022
         <a href="Animations/LineHourNew_Check/index.html"
-          ><img src="thumbnails/Line_Hour_Anim.png" alt="" class="my-1" />
+          ><img
+            src="thumbnails/Line_Hour_Anim.png"
+            alt=""
+            class="my-1 max-h-fit"
+          />
           <a href="Animations/Spiralhour_Check/index.html"
-            ><img src="thumbnails/Spiral_Hour_Anim.png" alt="" class="my-1" />
+            ><img src="thumbnails/gifTest3.gif" alt="" class="my-1 max-h-min" />
           </a>
         </a>
       </div>
@@ -45,7 +63,7 @@
           ><img src="thumbnails/Line_Hour_2019.png" alt="" class="my-1" />
         </a>
         <a href="2019/Spiral/Spiralhour_Check/index.html"
-          ><img src="thumbnails/Spiral_Hour_2019.png" alt="" class="my-1" />
+          ><img src="thumbnails/Bildgrösse test.png" alt="" class="my-1" />
         </a>
       </div>
       <div class="text-center text-black">
