--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="text-center text-black">
         2019
         <a href="2019/Line/LineHourNew_Check/index.html"
-          ><img src="thumbnails/Line_Hour_2019.png" alt="" class="my-1" />
+          ><img src="thumbnails/myCanvas3.png" alt="" class="my-1" />
         </a>
         <a href="2019/Spiral/Spiralhour_Check/index.html"
-          ><img src="thumbnails/Bildgrösse test.png" alt="" class="my-1" />
+          ><img src="thumbnails/myCanvas3.png" alt="" class="my-1" />
         </a>
       </div>
       <div class="text-center text-black">
