--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
         2019-2022
         <a href="Animations/LineHourNew_Check/index.html"
           ><img
-            src="thumbnails/Line_Hour_Anim.png"
+            src="thumbnails/Line_Hour_Anim.gif"
             alt=""
             class="my-1 max-h-fit"
           />
           <a href="Animations/Spiralhour_Check/index.html"
-            ><img src="thumbnails/gifTest3.gif" alt="" class="my-1 max-h-min" />
+            ><img
+              src="thumbnails/Spiral_Hour_Anim.gif"
+              alt=""
+              class="my-1 max-h-min"
+            />
           </a>
         </a>
       </div>
@@ -108,9 +112,9 @@
       <div class="text-center text-black">
         2019-2022
         <a href="Animations/LineDayNew_Check/index.html"
-          ><img src="thumbnails/Line_Day_Anim.png" alt="" class="my-1" />
+          ><img src="thumbnails/Line_Day_Anim.gif" alt="" class="my-1" />
           <a href="Animations/SpiralDay_Check/index.html"
-            ><img src="thumbnails/Spiral_Day_Anim.png" alt="" class="my-1" />
+            ><img src="thumbnails/Spiral_Day_Anim.gif" alt="" class="my-1" />
           </a>
         </a>
       </div>
@@ -162,9 +166,9 @@
       <div class="text-center text-black">
         2019-2022
         <a href="Animations/LineWeekNew_Check/index.html"
-          ><img src="thumbnails/Line_Week_Anim.png" alt="" class="my-1" />
+          ><img src="thumbnails/Line_Week_Anim.gif" alt="" class="my-1" />
           <a href="Animations/SpiralWeek_Check/index.html"
-            ><img src="thumbnails/Spiral_Week_Anim.png" alt="" class="my-1" />
+            ><img src="thumbnails/Spiral_Week_Anim.gif" alt="" class="my-1" />
           </a>
         </a>
       </div>
@@ -218,9 +222,9 @@
       <div class="text-center text-black">
         2019-2022
         <a href="Animations/LinemonthNew_Check/index.html"
-          ><img src="thumbnails/Line_month_Anim.png" alt="" class="my-1" />
+          ><img src="thumbnails/Line_Month_Anim.gif" alt="" class="my-1" />
           <a href="Animations/Spiralmonth_Check/index.html"
-            ><img src="thumbnails/Spiral_month_Anim.png" alt="" class="my-1" />
+            ><img src="thumbnails/Spiral_Month_Anim.gif" alt="" class="my-1" />
           </a>
         </a>
       </div>
@@ -230,7 +234,7 @@
           ><img src="thumbnails/Line_month_2019.png" alt="" class="my-1" />
         </a>
         <a href="2019/Spiral/Spiralmonth_Check/index.html"
-          ><img src="thumbnails/Spiral_month_2019.png" alt="" class="my-1" />
+          ><img src="thumbnails/Spiral_Month_2019.png" alt="" class="my-1" />
         </a>
       </div>
       <div class="text-center text-black">
@@ -272,9 +276,9 @@
       <div class="text-center text-black">
         2019-2022
         <a href="Animations/LineyearNew_Check/index.html"
-          ><img src="thumbnails/Line_year_Anim.png" alt="" class="my-1" />
+          ><img src="thumbnails/Line_Year_Anim.gif" alt="" class="my-1" />
           <a href="Animations/Spiralyear_Check/index.html"
-            ><img src="thumbnails/Spiral_year_Anim.png" alt="" class="my-1" />
+            ><img src="thumbnails/Spiral_Year_Anim.gif" alt="" class="my-1" />
           </a>
         </a>
       </div>
