--- a/index.html
+++ b/index.html
@@ -9,30 +9,28 @@
   </head>
 
   <body class="bg-white">
-    <div class="mt-8 mx-8">
+    <div class="mt-8 mx-10">
       <h1 class="text-4xl mb-1 font-bold text-black">15 Minuten Wellen</h1>
       <h1 class="text-2xl mb-5 font-regular text-black">
         Basel und Zürich: Energieverbrauch im 15’ Takt
       </h1>
       <p class="text-0.5xl font-light font-reg text-black max-w-md">
-        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und
-        Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind,
-        eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine
-        Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit
-        von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
-        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und
-        Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind,
-        eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine
-        Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit
-        von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
-        Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und
-        Zürich sind, eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind,
-        eine Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine
-        Bachelorarbeit von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit
-        von Tim Zaugg Basel und Zürich sind, eine Bachelorarbeit von Tim Zaugg
+        Herzlich willkommen auf meiner Webseite 15 Minuten Wellen. Hier
+        präsentiere ich dir eine vielzahl an Visualisierung des Stromverbrauchs
+        von Basel und Zürich zwischen 2019 und 2022. Die in p5.js erstellten
+        Grafiken basieren auf Daten, welche alle 15 Minuten erfasst wurden und
+        zeigen den Verbrauch in verschiedenen Zeitspannen, stündlich, täglich,
+        wöchentlich, monatlich und dies für die einzelnen Jahre.
       </p>
-      <p class="text-0.5xl font-light font-reg text-black pb-5">
-        Auf dieser Seite findet man...
+      <p class="mt-5 text-0.5xl font-light font-reg text-black max-w-md">
+        Egal ob du aus Neugierde hier bist oder einfach mehr über den
+        Stromverbrauch erfahren möchtest, ermöglichen dir die Grafiken einen
+        Einblick in den Stromverbrauch. Entdecke Muster und Trends, die sich
+        entwickelt haben. Möglicherweise eröffnen sich neue Perspektiven.
+      </p>
+      <p class="mt-5 text-0.5xl font-light font-reg text-black max-w-md">
+        Erkunde die Wellen des Stromverbrauchs und erfahre Neues, was über
+        blosse Zahlen hinausgehen.
       </p>
     </div>
 
@@ -99,11 +97,6 @@
       </div>
     </div>
 
-    <div class="mt-5 mb-5 ml-10 text-black font-light">
-      Bei der stündlichen Ansicht kann man gut den minimalen und maximalen
-      Stromverbrauch sehen.
-    </div>
-
     <div class="mt-10 mb-10 text-center text-black font-bold">Tageszyklus</div>
 
     <div
@@ -156,8 +149,6 @@
       </div>
     </div>
 
-    <div class="mt-5 mb-5 ml-10 text-black font-light">Beim Tageszyklus...</div>
-
     <div class="mt-10 mb-10 text-center text-black font-bold">Wochenzyklus</div>
 
     <div
@@ -208,10 +199,6 @@
           ><img src="thumbnails/Spiral_Week_2022.png" alt="" class="my-1" />
         </a>
       </div>
-    </div>
-
-    <div class="mt-5 mb-5 ml-10 text-black font-light">
-      Beim Wochenzyklus...
     </div>
 
     <div class="mt-10 mb-10 text-center text-black font-bold">Monat</div>
@@ -266,8 +253,6 @@
       </div>
     </div>
 
-    <div class="mt-5 mb-5 ml-10 text-black font-light">Beim den Monaten...</div>
-
     <div class="mt-10 mb-10 text-center text-black font-bold">Jahr</div>
 
     <div
@@ -319,10 +304,20 @@
         </a>
       </div>
     </div>
-    <div class="mt-5 mb-5 ml-10 text-black font-light">Beim den Jahren...</div>
+
+    <div class="mt-8 mx-10">
+      <p class="text-0.5xl font-light font-reg text-black max-w-md">
+        Interessanterweise zeigt sich, dass trotz der unterschiedlichen Grösse
+        und Bevölkerungsdichte von Zürich und Basel erstaunlich ähnliche
+        Gewohnheiten im Stromverbrauch existieren. Die Daten zeigen Parallelen
+        zwischen den beiden Städten auf, sowohl in den Spitzenzeiten als auch in
+        den Verbrauchsmustern im Laufe des Tages, der Woche, des Monats und dem
+        Jahr.
+      </p>
+    </div>
 
     <div>
-      <p class="text-0.5xl mx-10 font-light font-reg text-black pb-5">
+      <p class="mt-10 text-0.5xl mx-10 font-light font-reg text-black pb-5">
         Tim Zaugg <br />
         tim.zaugg93@gmail.com <br />
       </p>
