--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Egal ob du aus Neugierde hier bist oder einfach mehr über den
         Stromverbrauch erfahren möchtest, ermöglichen dir die Grafiken einen
         Einblick in den Stromverbrauch. Entdecke Muster und Trends, die sich
-        entwickelt haben. Möglicherweise eröffnen sich neue Perspektiven.
+        entwickelt haben.
       </p>
       <p class="mt-5 text-0.5xl font-light font-reg text-black max-w-md">
         Erkunde die Wellen des Stromverbrauchs und erfahre Neues, was über
@@ -35,9 +35,7 @@
     </div>
 
     <!--  Stunde Line -->
-    <div class="mt-20 mb-10 text-center text-black font-bold">
-      Stundenzyklus
-    </div>
+    <div class="mt-20 mb-10 text-center text-black font-bold">Stunden</div>
 
     <div
       class="mx-0 sm:mx-10 mt-0 grid grid-cols-1 sm:grid-cols-5 md:grid-cols-5 gap-1 font-light"
@@ -97,7 +95,7 @@
       </div>
     </div>
 
-    <div class="mt-10 mb-10 text-center text-black font-bold">Tageszyklus</div>
+    <div class="mt-10 mb-10 text-center text-black font-bold">Tage</div>
 
     <div
       class="mx-0 sm:mx-10 mt-0 grid grid-cols-1 sm:grid-cols-5 md:grid-cols-5 gap-1 font-light"
@@ -149,7 +147,7 @@
       </div>
     </div>
 
-    <div class="mt-10 mb-10 text-center text-black font-bold">Wochenzyklus</div>
+    <div class="mt-10 mb-10 text-center text-black font-bold">Wochen</div>
 
     <div
       class="mx-0 sm:mx-10 mt-0 grid grid-cols-1 sm:grid-cols-5 md:grid-cols-5 gap-1 font-light"
@@ -201,7 +199,7 @@
       </div>
     </div>
 
-    <div class="mt-10 mb-10 text-center text-black font-bold">Monat</div>
+    <div class="mt-10 mb-10 text-center text-black font-bold">Monate</div>
 
     <div
       class="mx-0 sm:mx-10 mt-0 grid grid-cols-1 sm:grid-cols-5 md:grid-cols-5 gap-1 font-light"
