--- a/backup.html
+++ b/backup.html
@@ -37,7 +37,7 @@
     </div>
 
     <!--  Stunde Line -->
-    <div class="mt-5 mb-5 text-center text-black font-light">Stundenzyklus</div>
+    <div class="mt-5 mb-5 text-center text-black font-light">Stunden</div>
 
     <div
       class="mx-0 mt-0 grid grid-cols-5 sm:grid-cols-5 md:grid-cols-5 gap-1 font-light"
@@ -106,13 +106,13 @@
       </a>
       <!-- <p class="text-white">This is it</p> -->
     </div>
-    <div class="mt-5 mb-5 ml-10 text-black font-light">
+    <!--     <div class="mt-5 mb-5 ml-10 text-black font-light">
       Bei der stündlichen Ansicht kann man gut den minimalen und maximalen
       Stromverbrauch sehen.
-    </div>
+    </div> -->
 
     <!--  Tag Radial -->
-    <div class="mt-5 mb-5 text-center text-black font-light">Tageszyklus</div>
+    <div class="mt-5 mb-5 text-center text-black font-light">Tage</div>
     <div class="mx-0 my-1 grid grid-cols-5 sm:grid-cols-5 md:grid-cols-5 gap-1">
       <a href="Animations/LineDayNew_Check/index.html"
         ><img src="thumbnails/Line_Day_Anim.png" alt="" />
@@ -166,13 +166,13 @@
       </a>
       <!-- <p class="text-white">This is it</p> -->
     </div>
-    <div class="mt-5 mb-5 ml-10 text-black font-light">
+    <!--     <div class="mt-5 mb-5 ml-10 text-black font-light">
       In Zürich gibt es zwei Anstiege kurz nach Mitternacht, in Basel ist es nur
       ein kleiner Anstieg. Der grösste Stromverbrauch ist am Mittag und gegen
       18:00 Uhr.
-    </div>
+    </div> -->
 
-    <div class="mt-5 mb-5 text-center text-black font-light">Wochenzyklus</div>
+    <div class="mt-5 mb-5 text-center text-black font-light">Wochen</div>
     <div class="mx-0 my-1 grid grid-cols-5 sm:grid-cols-5 md:grid-cols-5 gap-1">
       <a href="Animations/LineweekNew_Check/index.html"
         ><img src="thumbnails/Line_week_Anim.png" alt="" />
