--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>⚡ 15 Minuten Wellen ⚡</title>
   </head>
 
   <body class="bg-white">
     <div class="mt-8 mx-10">
       <h1 class="text-4xl mb-1 font-bold text-black">15 Minuten Wellen</h1>
-      <h1 class="text-2xl mb-5 font-regular text-black">
+      <h1 class="text-2xl mb-20 font-regular text-black">
         Basel und Zürich: Energieverbrauch im 15’ Takt
       </h1>
-      <p class="text-0.5xl font-light font-reg text-black max-w-md">
-        Herzlich willkommen auf meiner Webseite 15 Minuten Wellen. Hier
-        präsentiere ich dir eine vielzahl an Visualisierung des Stromverbrauchs
-        von Basel und Zürich zwischen 2019 und 2022. Die in p5.js erstellten
-        Grafiken basieren auf Daten, welche alle 15 Minuten erfasst wurden und
-        zeigen den Verbrauch in verschiedenen Zeitspannen, stündlich, täglich,
-        wöchentlich, monatlich und dies für die einzelnen Jahre.
+      <p class="text-0.5xl font-regular text-black max-w-sm">
+        Herzlich willkommen auf meiner Webseite!
       </p>
-      <p class="mt-5 text-0.5xl font-light font-reg text-black max-w-md">
+      <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
+        Hier präsentiere ich dir eine vielzahl an Visualisierung des
+        Stromverbrauchs von Basel und Zürich zwischen 2019 und 2022. Die in
+        p5.js erstellten Grafiken basieren auf Daten, welche alle 15 Minuten
+        erfasst wurden. Sie zeigen den Verbrauch in verschiedenen
+        Visualisierungsformen und Zeitspannen. Stündlich, täglich, wöchentlich,
+        monatlich und dies für die einzelnen Jahre.
+      </p>
+      <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
         Egal ob du aus Neugierde hier bist oder einfach mehr über den
         Stromverbrauch erfahren möchtest, ermöglichen dir die Grafiken einen
         Einblick in den Stromverbrauch. Entdecke Muster und Trends, die sich
         entwickelt haben.
       </p>
-      <p class="mt-5 text-0.5xl font-light font-reg text-black max-w-md">
+      <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
         Erkunde die Wellen des Stromverbrauchs und erfahre Neues, was über
         blosse Zahlen hinausgehen.
       </p>
@@ -304,7 +308,7 @@
     </div>
 
     <div class="mt-8 mx-10">
-      <p class="text-0.5xl font-light font-reg text-black max-w-md">
+      <p class="text-0.5xl font-regular text-black max-w-md">
         Interessanterweise zeigt sich, dass trotz der unterschiedlichen Grösse
         und Bevölkerungsdichte von Zürich und Basel erstaunlich ähnliche
         Gewohnheiten im Stromverbrauch existieren. Die Daten zeigen Parallelen
@@ -314,12 +318,32 @@
       </p>
     </div>
 
+    <div class="mt-10 mx-10">
+      <p class="text-0.5xl font-bold text-black max-w-md">Daten <br /></p>
+
+      <a
+        class="text-0.5xl font-regular text-sky-600 max-w-md"
+        href="https://data.stadt-zuerich.ch/dataset/ewz_bruttolastgang_stadt_zuerich"
+        >Zürich</a
+      >
+      <br />
+      <a
+        class="text-0.5xl font-regular text-sky-600 max-w-md"
+        href="https://data.bs.ch/explore/dataset/100233/export/?sort=timestamp_interval_start"
+        >Basel</a
+      >
+    </div>
     <div>
-      <p class="mt-10 text-0.5xl mx-10 font-light font-reg text-black pb-5">
+      <p class="mt-10 text-0.5xl mx-10 font-regular text-black pb-5">
         Tim Zaugg <br />
         tim.zaugg93@gmail.com <br />
+        <a
+          class="text-0.5xl font-regular text-sky-600 max-w-md"
+          href="https://github.com/ZauggT/StromBZ"
+          >GitHub</a
+        >
       </p>
-      <p class="text-0.5xl mx-10 font-light font-reg text-black pb-5">
+      <p class="text-0.5xl mt-10 mx-10 font-regular font-reg text-black pb-5">
         BA Data Design + Art <br />
         Hochschule Luzern – <br />
         Design & Kunst <br />
