--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
 
     <div class="mt-8 mx-10">
       <p class="text-0.5xl font-regular text-black max-w-md">
-        Interessanterweise zeigt sich, dass trotz der unterschiedlichen Grösse
-        und Bevölkerungsdichte von Zürich und Basel erstaunlich ähnliche
-        Gewohnheiten im Stromverbrauch existieren. Die Daten zeigen Parallelen
-        zwischen den beiden Städten auf, sowohl in den Spitzenzeiten als auch in
-        den Verbrauchsmustern im Laufe des Tages, der Woche, des Monats und dem
+        Interessanterweise zeigt sich, trotz der unterschiedlichen Grösse und
+        Bevölkerungsdichte von Zürich und Basel, erstaunlich ähnliche
+        Gewohnheiten im Stromverbrauch. Die Daten zeigen Parallelen zwischen den
+        beiden Städten auf, sowohl in den Spitzenzeiten als auch in den
+        Verbrauchsmustern im Laufe des Tages, der Woche, des Monats und dem
         Jahr.
       </p>
     </div>
