--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Herzlich willkommen auf meiner Webseite!
       </p>
       <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
-        Hier präsentiere ich dir eine vielzahl an Visualisierung des
+        Hier präsentiere ich dir eine Vielzahl an Visualisierung des
         Stromverbrauchs von Basel und Zürich zwischen 2019 und 2022. Die in
         p5.js erstellten Grafiken basieren auf Daten, welche alle 15 Minuten
         erfasst wurden. Sie zeigen den Verbrauch in verschiedenen
@@ -33,8 +33,8 @@
         entwickelt haben.
       </p>
       <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
-        Erkunde die Wellen des Stromverbrauchs und erfahre Neues, was über
-        blosse Zahlen hinausgehen.
+        Erkunde die Wellen des Stromverbrauchs durch Anklicken und erfahre
+        Neues, was über blosse Zahlen hinausgeht.
       </p>
     </div>
 
@@ -309,12 +309,11 @@
 
     <div class="mt-8 mx-10">
       <p class="text-0.5xl font-regular text-black max-w-md">
-        Interessanterweise zeigt sich, trotz der unterschiedlichen Grösse und
-        Bevölkerungsdichte von Zürich und Basel, erstaunlich ähnliche
-        Gewohnheiten im Stromverbrauch. Die Daten zeigen Parallelen zwischen den
-        beiden Städten auf, sowohl in den Spitzenzeiten als auch in den
-        Verbrauchsmustern im Laufe des Tages, der Woche, des Monats und dem
-        Jahr.
+        Trotz der unterschiedlichen Grösse und Bevölkerungsdichte von Zürich und
+        Basel, zeigen sich erstaundlich ähnliche Gewohnheiten im Stromverbrauch.
+        Die Daten zeigen Parallelen zwischen den beiden Städten auf, sowohl in
+        den Spitzenzeiten als auch in den Verbrauchsmustern im Laufe des Tages,
+        der Woche, des Monats und dem Jahr.
       </p>
     </div>
 
