--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         Trotz der unterschiedlichen Grösse und Bevölkerungsdichte von Zürich und
         Basel, zeigen sich erstaundlich ähnliche Gewohnheiten im Stromverbrauch.
         Die Daten zeigen Parallelen zwischen den beiden Städten auf, sowohl in
-        den Spitzenzeiten als auch in den Verbrauchsmustern im Laufe des Tages,
-        der Woche, des Monats und dem Jahr.
+        den Spitzenzeiten als auch in den Verbrauchsmustern und zwar in
+        Stunden-, Tages-, Wochen-, Monats- und Jahresvergleich.
       </p>
     </div>
 
