--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Stromverbrauchs von Basel und Zürich zwischen 2019 und 2022. Die in
         p5.js erstellten Grafiken basieren auf Daten, welche alle 15 Minuten
         erfasst wurden. Sie zeigen den Verbrauch in verschiedenen
-        Visualisierungsformen und Zeitspannen. Stündlich, täglich, wöchentlich,
+        Visualisierungsformen und Zeitspannen: Stündlich, täglich, wöchentlich,
         monatlich und dies für die einzelnen Jahre.
       </p>
       <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
@@ -33,8 +33,8 @@
         entwickelt haben.
       </p>
       <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
-        Erkunde die Wellen des Stromverbrauchs durch Anklicken und erfahre
-        Neues, was über blosse Zahlen hinausgeht.
+        Erkunde die Wellen des Stromverbrauchs und erfahre Neues, was über
+        blosse Zahlen hinausgeht.
       </p>
     </div>
 
