--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         Trotz der unterschiedlichen Grösse und Bevölkerungsdichte von Zürich und
         Basel, zeigen sich erstaundlich ähnliche Gewohnheiten im Stromverbrauch.
         Die Daten zeigen Parallelen zwischen den beiden Städten auf, sowohl in
-        den Spitzenzeiten als auch in den Verbrauchsmustern und zwar in
+        den Spitzenzeiten als auch in den Verbrauchsmustern und zwar im
         Stunden-, Tages-, Wochen-, Monats- und Jahresvergleich.
       </p>
     </div>
