--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Herzlich willkommen auf meiner Webseite!
       </p>
       <p class="mt-3 text-0.5xl font-reg text-black max-w-sm">
-        Hier präsentiere ich dir eine Vielzahl an Visualisierung des
+        Hier präsentiere ich dir eine Vielzahl an Visualisierung des absoluten
         Stromverbrauchs von Basel und Zürich zwischen 2019 und 2022. Die in
         p5.js erstellten Grafiken basieren auf Daten, welche alle 15 Minuten
         erfasst wurden. Sie zeigen den Verbrauch in verschiedenen
